<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="2">

        <TableRow>

            <TextView
                android:id="@+id/textview_q_f"
                android:gravity="right"
                android:paddingTop="8dp"
                android:text="@string/discharge"
                android:textColor="@color/my_primary"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner_q_f"
                android:gravity="center_horizontal" />

            <FrameLayout
                android:id="@+id/frame_q_f"
                android:paddingTop="4dp">

                <EditText
                    android:id="@+id/edittext_q_f"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="numberDecimal"
                    android:textColor="@color/my_primary"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/btn_clear_q_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/ic_clear_black_24dp"
                    android:visibility="invisible"/>

            </FrameLayout>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textview_v_f"
                android:gravity="right"
                android:paddingTop="8dp"
                android:text="@string/velocity"
                android:textColor="@color/my_primary"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner_v_f"
                android:gravity="center_horizontal" />

            <FrameLayout
                android:id="@+id/frame_v_f"
                android:paddingTop="4dp">

                <EditText
                    android:id="@+id/edittext_v_f"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="numberDecimal"
                    android:textColor="@color/my_primary"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/btn_clear_v_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/ic_clear_black_24dp"
                    android:visibility="invisible"/>

            </FrameLayout>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textview_d_f"
                android:gravity="right"
                android:paddingTop="8dp"
                android:text="@string/diameter"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner_d_f"
                android:gravity="center_horizontal" />

            <FrameLayout
                android:id="@+id/frame_d_f"
                android:paddingTop="4dp">

                <EditText
                    android:id="@+id/edittext_d_f"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/btn_clear_d_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/ic_clear_black_24dp" />

            </FrameLayout>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textview_n_f"
                android:gravity="right"
                android:paddingTop="8dp"
                android:text="@string/roughness"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner_n_f"
                android:gravity="center_horizontal" />

            <FrameLayout
                android:id="@+id/frame_n_f"
                android:paddingTop="4dp">

                <EditText
                    android:id="@+id/edittext_n_f"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/btn_clear_n_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/ic_clear_black_24dp" />

            </FrameLayout>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textview_i_f"
                android:gravity="right"
                android:paddingTop="8dp"
                android:text="@string/gradient"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner_i_f"
                android:gravity="center_horizontal" />

            <FrameLayout
                android:id="@+id/frame_i_f"
                android:paddingTop="4dp">

                <EditText
                    android:id="@+id/edittext_i_f"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/btn_clear_i_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/ic_clear_black_24dp" />

            </FrameLayout>
        </TableRow>

    </TableLayout>

</ScrollView>
