<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        style="@style/Widget.MyApp.ActionBar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/toolbar"
        android:scrollbars="none">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="2">

            <TableRow>
                <TextView
                    android:id="@+id/textview_q"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:text="@string/discharge"
                    android:paddingTop="8dp"
                    android:gravity="right"/>

                <Spinner
                    android:id="@+id/spinner_q"
                    android:gravity="center_horizontal"/>

                <FrameLayout
                    android:id="@+id/frame_q"
                    android:paddingTop="4dp">

                    <EditText
                        android:id="@+id/edittext_q"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:inputType="numberDecimal"
                        android:enabled="true"/>

                    <ImageButton
                        android:id="@+id/btn_clear_q"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_clear_black_24dp"
                        android:layout_gravity="right|center_vertical"/>

                </FrameLayout>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/textview_v"
                    android:textColor="@color/my_primary"
                    android:textSize="24sp"
                    android:text="@string/velocity"
                    android:paddingTop="8dp"
                    android:gravity="right"/>

                <Spinner
                    android:id="@+id/spinner_v"
                    android:gravity="center_horizontal"/>

                <FrameLayout
                    android:id="@+id/frame_v"
                    android:paddingTop="4dp">

                    <EditText
                        android:id="@+id/edittext_v"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/my_primary"
                        android:textSize="24sp"
                        android:inputType="numberDecimal"
                        android:enabled="false"/>

                    <ImageButton
                        android:id="@+id/btn_clear_v"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:background="@drawable/ic_clear_black_24dp"
                        android:visibility="invisible"/>

                </FrameLayout>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/textview_d"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:text="@string/diameter"
                    android:paddingTop="8dp"
                    android:gravity="right"/>

                <Spinner
                    android:id="@+id/spinner_d"
                    android:gravity="center_horizontal"/>

                <FrameLayout
                    android:id="@+id/frame_d"
                    android:paddingTop="4dp">

                    <EditText
                        android:id="@+id/edittext_d"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:inputType="numberDecimal"
                        android:enabled="true"/>

                    <ImageButton
                        android:id="@+id/btn_clear_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:background="@drawable/ic_clear_black_24dp"/>

                </FrameLayout>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/textview_h"
                    android:textColor="@color/my_primary"
                    android:textSize="24sp"
                    android:text="@string/head_loss"
                    android:paddingTop="8dp"
                    android:gravity="right"/>

                <Spinner
                    android:id="@+id/spinner_h"
                    android:gravity="center_horizontal"/>

                <FrameLayout
                    android:id="@+id/frame_h"
                    android:paddingTop="4dp">

                    <EditText
                        android:id="@+id/edittext_h"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/my_primary"
                        android:textSize="24sp"
                        android:inputType="numberDecimal"
                        android:enabled="false"/>

                    <ImageButton
                        android:id="@+id/btn_clear_h"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:background="@drawable/ic_clear_black_24dp"
                        android:visibility="invisible"/>

                </FrameLayout>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/textview_l"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:text="@string/length"
                    android:paddingTop="8dp"
                    android:gravity="right"/>

                <Spinner
                    android:id="@+id/spinner_l"
                    android:gravity="center_horizontal"/>

                <FrameLayout
                    android:id="@+id/frame_l"
                    android:paddingTop="4dp">

                    <EditText
                        android:id="@+id/edittext_l"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:inputType="numberDecimal"
                        android:enabled="true"/>

                    <ImageButton
                        android:id="@+id/btn_clear_l"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:background="@drawable/ic_clear_black_24dp"/>

                </FrameLayout>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/textview_i"
                    android:textColor="@color/my_primary"
                    android:textSize="24sp"
                    android:text="@string/gradient"
                    android:paddingTop="8dp"
                    android:gravity="right"/>

                <Spinner
                    android:id="@+id/spinner_i"
                    android:gravity="center_horizontal"/>

                <FrameLayout
                    android:id="@+id/frame_i"
                    android:paddingTop="4dp">

                    <EditText
                        android:id="@+id/edittext_i"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/my_primary"
                        android:textSize="24sp"
                        android:inputType="numberDecimal"
                        android:enabled="false"/>

                    <ImageButton
                        android:id="@+id/btn_clear_i"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:background="@drawable/ic_clear_black_24dp"
                        android:visibility="invisible"/>

                </FrameLayout>
            </TableRow>

        </TableLayout>

    </ScrollView>

</RelativeLayout>